--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tachable Machine Image Recognition p5.js Serial Port</title>
+    <title>Tim Taser</title>
     <style>
         html,
         body {
-            margin: 0;
+            margin: 50%;
             padding: 0;
         }
 
