--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tim Taser</title>
+    <title>Tachable Machine Image Recognition p5.js Serial Port</title>
     <style>
         html,
         body {
