--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="">
 
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tachable Machine Image Recognition p5.js Serial Port</title>
@@ -20,6 +21,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5.serialserver@0.0.28/lib/p5.serialport.js"></script>
     <script type="text/javascript" src="https://unpkg.com/ml5@0.6.1/dist/ml5.min.js"></script>
     <script type="text/javascript" src="/sketch.js"></script>
+
 </head>
 
 <body>
