--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tachable Machine Image Recognition p5.js Serial Port</title>
+    <title>Tim Taser</title>
     <style>
         html,
         body {
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5.serialserver@0.0.28/lib/p5.serialport.js"></script>
     <script type="text/javascript" src="https://unpkg.com/ml5@0.6.1/dist/ml5.min.js"></script>
+    <script src="/p5.buttons.js"></script>
     <script type="text/javascript" src="/sketch.js"></script>
 
 </head>
